Fixing overlapping orange span when it drops into a new line

--- a/css/home.css
+++ b/css/home.css
@@ -75,6 +75,11 @@ box-shadow: 0 0 25px rgba(0, 0, 0, 0.5),
 	position: relative;
 }
 
+/*To fix the overlapping bits of text in the header card.*/
+.welcome-content span{
+line-height: 67px;
+}
+
 .profile-img {
 	border-radius: 50%;
     width: 25%;
